# ChronoScalp-XAU-EUR

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.cursor/rules/: project.mdc
.github/workflows/: ci.yml
config/: news_events.yaml  settings.yaml  symbols.yaml
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  DEPLOY_NL_VPS.md  FOROOSH_FA.md  RAHNAMA_FA.md  RISK_DISCLAIMER.md  ROADMAP.md  SSH_VPS.md  TELEGRAM_BOT_FA.md
scripts/: app.py  dashboard.py  dashboard_i18n.py  dashboard_stats.py  fetch_history.py  manage_licenses.py  panel_theme.py  remote_bootstrap.py  remote_continue_setup.py  run_backtest.py  run_live.py  run_optimize.py  seed_dashboard_demo.py  start.bat  stop.bat  telegram_control_bot.py  train_ml_model.py  vps-setup.sh  vps_bootstrap_win2019.ps1  vps_enable_openssh.ps1  vps_finish_demo.ps1  windows_vps_setup.ps1
src/chronoscalp/: __init__.py  config.py  logging_setup.py  main.py
src/chronoscalp/backtest/: engine.py  optimizer.py
src/chronoscalp/data/: mt5_connector.py  oanda_connector.py  spread_sampler.py
src/chronoscalp/execution/: broker.py  mt5_broker.py  mt5_utils.py  (+4 more)
tests/: test_alerts.py  test_backtest_engine.py  test_bar_scheduler.py  test_circuit_breaker.py  test_execution_utils.py  test_indicators.py  test_kill_switch.py  test_licensing.py  test_ml_pipeline.py  test_news_filter.py  test_oanda.py  test_optimizer.py  test_risk.py  test_saas.py  test_session_filter.py  test_smc.py  test_state_store.py  test_strategy.py  test_ticks_ohlcv.py  test_trade_journal.py
(+28 files in other folders)
